Fix for bug 55591. UNC files need to be treated as remote attachment and not local. R=varada, SR=mscott